# project-lens

./: .eslintignore  .eslintrc.js  .gitignore  .markdownlint.json  .prettierignore  .prettierrc.js  BUILD.md  CLAUDE.md  LICENSE  README.md  README_JP.md  TEST_SUITE_COMPLETION_REPORT.md  build.sh  drizzle.config.ts  electron-vite.config.ts  eslint.config.cjs  eslint.config.js  generate_icons.py  nuxt.config.ts  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.electron.json  tsconfig.json  vitest.config.ts
.claude/: settings.local.json
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  setup-shared-volumes.sh
coverage/: clover.xml  coverage-final.json  index.html
docs/: ARCHITECTURE.md  COLOR_SCHEME.md  COMPONENTS.md  COMPONENT_RULES.md  REQUIREMENTS.md  SETUP_GUIDE.md  USER_MANUAL.md  error-handling.md  future-implementations.md  logging-system.md  memo.md  performance-guide.md
drizzle/: 0000_fearless_warlock.sql
src/: app.vue  (+2 more)
src-tauri/: .gitignore  .rustfmt.toml  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/sidecar/: .gitignore  Package.swift  README.md
src-tauri/sidecar/Sources/projectlens-ai-sidecar/: main.swift
src-tauri/sidecar/Sources/projectlens-ai-sidecar/Resources/: README.md
src-tauri/src/: backlog.rs  commands.rs  db.rs  lib.rs  log_commands.rs  rate_limit.rs  sample_test.rs  scheduler.rs  scoring.rs
src-tauri/src/ai/: availability.rs  cosine.rs  embed_worker.rs  embedding.rs  foundation_models.rs  mod.rs  worker.rs
(+185 files in other folders)
